Bug 1613705 - [localization] part5: Refactor tests to use new API model. r=platform-i18n-reviewers,dminor
Depends on D113247

Differential Revision: https://phabricator.services.mozilla.com/D113248

UltraBlame original commit: 6466027c5767b97120799eaa68fc86c8d62686e2

--- a/intl/l10n/test/mochitest/localization/test_formatMessages.html
+++ b/intl/l10n/test/mochitest/localization/test_formatMessages.html
@@ -108,39 +108,50 @@ use
 strict
 "
 ;
-async
-function
-*
-generateBundles
-(
-resourceIds
-)
-{
 const
-bundle
+mockSource
 =
-new
-FluentBundle
+L10nFileSource
+.
+createMock
 (
+"
+test
+"
+[
 "
 en
 -
 US
 "
+]
+"
+/
+localization
+/
 {
-useIsolating
-:
-false
+locale
 }
-)
-;
-bundle
+/
+"
+[
+{
+path
+:
+"
+/
+localization
+/
+en
+-
+US
+/
+mock
 .
-addResource
-(
-new
-FluentResource
-(
+ftl
+"
+source
+:
 key1
 =
 Value
@@ -166,13 +177,36 @@ for
 {
 user
 }
-)
-)
-;
-yield
-bundle
-;
 }
+]
+)
+;
+let
+registry
+=
+new
+L10nRegistry
+(
+{
+bundleOptions
+:
+{
+useIsolating
+:
+false
+}
+}
+)
+;
+registry
+.
+registerSources
+(
+[
+mockSource
+]
+)
+;
 function
 getAttributeByName
 (
@@ -225,9 +259,7 @@ ftl
 '
 ]
 false
-{
-generateBundles
-}
+registry
 )
 ;
 {
@@ -478,6 +510,8 @@ e
 is
 (
 e
+.
+message
 "
 [
 fluent
@@ -500,7 +534,6 @@ Unknown
 variable
 :
 user
-.
 "
 "
 Missing
@@ -577,19 +610,21 @@ e
 is
 (
 e
+.
+message
 "
 [
 fluent
 ]
 Missing
-translations
+message
 in
+locale
 en
 -
 US
 :
 key4
-.
 "
 "
 Missing
