Bug 1613705 - [localization] part9: Update DOMLocalization to match Localization constructor. r=nika,emilio
Depends on D113691

Differential Revision: https://phabricator.services.mozilla.com/D113692

UltraBlame original commit: 626b40e3aad147d59a439b0bd1d5dbd328ad6b1a

--- a/dom/l10n/tests/mochitest/dom_localization/test_attr_sanitized.html
+++ b/dom/l10n/tests/mochitest/dom_localization/test_attr_sanitized.html
@@ -108,34 +108,35 @@ use
 strict
 "
 ;
-async
-function
-*
-generateBundles
-(
-resourceIds
-)
-{
 const
-bundle
+l10nReg
 =
 new
-FluentBundle
+L10nRegistry
 (
+)
+;
+const
+fs
+=
+[
+{
+path
+:
 "
+/
+localization
+/
 en
 -
 US
-"
-)
-;
-bundle
+/
+mock
 .
-addResource
-(
-new
-FluentResource
-(
+ftl
+"
+source
+:
 key1
 =
 Value
@@ -156,13 +157,46 @@ a
 /
 >
 .
-)
-)
-;
-yield
-bundle
-;
 }
+]
+;
+const
+source
+=
+L10nFileSource
+.
+createMock
+(
+"
+test
+"
+[
+"
+en
+-
+US
+"
+]
+"
+/
+localization
+/
+{
+locale
+}
+"
+fs
+)
+;
+l10nReg
+.
+registerSources
+(
+[
+source
+]
+)
+;
 SimpleTest
 .
 waitForExplicitFinish
@@ -184,11 +218,22 @@ new
 DOMLocalization
 (
 [
+"
+/
+mock
+.
+ftl
+"
 ]
 false
-{
-generateBundles
-}
+l10nReg
+[
+"
+en
+-
+US
+"
+]
 )
 ;
 await
