--- a/dom/l10n/tests/mochitest/dom_localization/test_domloc.xhtml
+++ b/dom/l10n/tests/mochitest/dom_localization/test_domloc.xhtml
@@ -143,34 +143,35 @@ javascript
 [
 CDATA
 [
-async
-function
-*
-generateBundles
-(
-resourceIds
-)
-{
 const
-bundle
+l10nReg
 =
 new
-FluentBundle
+L10nRegistry
 (
+)
+;
+const
+fs
+=
+[
+{
+path
+:
 "
+/
+localization
+/
 en
 -
 US
-"
-)
-;
-bundle
+/
+mock
 .
-addResource
-(
-new
-FluentResource
-(
+ftl
+"
+source
+:
 file
 -
 menu
@@ -217,13 +218,46 @@ foo
 inside
 it
 .
-)
-)
-;
-yield
-bundle
-;
 }
+]
+;
+const
+source
+=
+L10nFileSource
+.
+createMock
+(
+"
+test
+"
+[
+"
+en
+-
+US
+"
+]
+"
+/
+localization
+/
+{
+locale
+}
+"
+fs
+)
+;
+l10nReg
+.
+registerSources
+(
+[
+source
+]
+)
+;
 SimpleTest
 .
 waitForExplicitFinish
@@ -239,9 +273,14 @@ DOMLocalization
 [
 ]
 false
-{
-generateBundles
-}
+l10nReg
+[
+"
+en
+-
+US
+"
+]
 )
 ;
 async
@@ -256,7 +295,8 @@ addResourceIds
 (
 [
 "
-dummy
+/
+mock
 .
 ftl
 "
