--- a/dom/l10n/tests/mochitest/dom_localization/test_overlay_missing_all.html
+++ b/dom/l10n/tests/mochitest/dom_localization/test_overlay_missing_all.html
@@ -107,36 +107,14 @@ use
 strict
 "
 ;
-async
-function
-*
-generateBundles
-(
-resourceIds
-)
-{
 const
-bundle
+l10nReg
 =
 new
-FluentBundle
+L10nRegistry
 (
-"
-en
--
-US
-"
 )
 ;
-/
-/
-No
-translations
-!
-yield
-bundle
-;
-}
 SimpleTest
 .
 waitForExplicitFinish
@@ -160,9 +138,14 @@ DOMLocalization
 [
 ]
 false
-{
-generateBundles
-}
+l10nReg
+[
+"
+en
+-
+US
+"
+]
 )
 ;
 await
