--- a/dom/l10n/tests/mochitest/dom_localization/test_setAttributes.html
+++ b/dom/l10n/tests/mochitest/dom_localization/test_setAttributes.html
@@ -107,15 +107,14 @@ use
 strict
 "
 ;
-async
-function
-*
-generateBundles
+const
+l10nReg
+=
+new
+L10nRegistry
 (
-resourceIds
 )
-{
-}
+;
 window
 .
 onload
@@ -139,9 +138,7 @@ DOMLocalization
 [
 ]
 false
-{
-generateBundles
-}
+l10nReg
 )
 ;
 const
