--- a/dom/l10n/tests/mochitest/dom_localization/test_translateFragment.html
+++ b/dom/l10n/tests/mochitest/dom_localization/test_translateFragment.html
@@ -107,64 +107,84 @@ use
 strict
 "
 ;
-async
-function
-*
-generateBundles
-(
-resourceIds
-)
-{
 const
-bundle
+l10nReg
 =
 new
-FluentBundle
+L10nRegistry
 (
+)
+;
+const
+fs
+=
+[
+{
+path
+:
 "
+/
+localization
+/
 en
 -
 US
-"
-)
-;
-bundle
+/
+mock
 .
-addResource
-(
-new
-FluentResource
-(
+ftl
 "
+source
+:
 title
 =
 Hello
 World
-"
-)
-)
-;
-bundle
-.
-addResource
-(
-new
-FluentResource
-(
-"
 subtitle
 =
 Welcome
 to
 FluentBundle
-"
-)
-)
-;
-yield
-bundle
-;
 }
+]
+;
+const
+source
+=
+L10nFileSource
+.
+createMock
+(
+"
+test
+"
+[
+"
+en
+-
+US
+"
+]
+"
+/
+localization
+/
+{
+locale
+}
+"
+fs
+)
+;
+l10nReg
+.
+registerSources
+(
+[
+source
+]
+)
+;
 window
 .
 onload
@@ -187,11 +207,22 @@ new
 DOMLocalization
 (
 [
+"
+/
+mock
+.
+ftl
+"
 ]
 false
-{
-generateBundles
-}
+l10nReg
+[
+"
+en
+-
+US
+"
+]
 )
 ;
 const
