--- a/dom/l10n/tests/mochitest/l10n_mutations/test_disconnectedRoot_webcomponent.html
+++ b/dom/l10n/tests/mochitest/l10n_mutations/test_disconnectedRoot_webcomponent.html
@@ -110,34 +110,35 @@ use
 strict
 "
 ;
-async
-function
-*
-generateBundles
-(
-resourceIds
-)
-{
 const
-bundle
+l10nReg
 =
 new
-FluentBundle
+L10nRegistry
 (
+)
+;
+const
+fs
+=
+[
+{
+path
+:
 "
+/
+localization
+/
 en
 -
 US
-"
-)
-;
-bundle
+/
+mock
 .
-addResource
-(
-new
-FluentResource
-(
+ftl
+"
+source
+:
 key1
 =
 Key
@@ -154,13 +155,46 @@ key4
 =
 Key
 4
-)
-)
-;
-yield
-bundle
-;
 }
+]
+;
+const
+source
+=
+L10nFileSource
+.
+createMock
+(
+"
+test
+"
+[
+"
+en
+-
+US
+"
+]
+"
+/
+localization
+/
+{
+locale
+}
+"
+fs
+)
+;
+l10nReg
+.
+registerSources
+(
+[
+source
+]
+)
+;
 document
 .
 domLoc
@@ -169,11 +203,22 @@ new
 DOMLocalization
 (
 [
+"
+/
+mock
+.
+ftl
+"
 ]
 false
-{
-generateBundles
-}
+l10nReg
+[
+"
+en
+-
+US
+"
+]
 )
 ;
 document
