--- a/dom/l10n/tests/mochitest/dom_localization/test_overlay_missing_children.html
+++ b/dom/l10n/tests/mochitest/dom_localization/test_overlay_missing_children.html
@@ -107,34 +107,35 @@ use
 strict
 "
 ;
-async
-function
-*
-generateBundles
-(
-resourceIds
-)
-{
 const
-bundle
+l10nReg
 =
 new
-FluentBundle
+L10nRegistry
 (
+)
+;
+const
+fs
+=
+[
+{
+path
+:
 "
+/
+localization
+/
 en
 -
 US
-"
-)
-;
-bundle
+/
+mock
 .
-addResource
-(
-new
-FluentResource
-(
+ftl
+"
+source
+:
 title
 =
 Visit
@@ -179,13 +180,46 @@ a
 >
 website
 !
-)
-)
-;
-yield
-bundle
-;
 }
+]
+;
+const
+source
+=
+L10nFileSource
+.
+createMock
+(
+"
+test
+"
+[
+"
+en
+-
+US
+"
+]
+"
+/
+localization
+/
+{
+locale
+}
+"
+fs
+)
+;
+l10nReg
+.
+registerSources
+(
+[
+source
+]
+)
+;
 window
 .
 onload
@@ -208,11 +242,22 @@ new
 DOMLocalization
 (
 [
+"
+/
+mock
+.
+ftl
+"
 ]
 false
-{
-generateBundles
-}
+l10nReg
+[
+"
+en
+-
+US
+"
+]
 )
 ;
 await
