Backed out 11 changesets (bug 1613705) for several test failures. CLOSED TREE
Backed out changeset 4e690882b6af (bug 1613705)
Backed out changeset 302e7a75affc (bug 1613705)
Backed out changeset 626b40e3aad1 (bug 1613705)
Backed out changeset 1cbab987bb7d (bug 1613705)
Backed out changeset 2213917abb30 (bug 1613705)
Backed out changeset c89aa0375690 (bug 1613705)
Backed out changeset 6466027c5767 (bug 1613705)
Backed out changeset 6c188c4b38bf (bug 1613705)
Backed out changeset 8d0c087b9896 (bug 1613705)
Backed out changeset 3404fd6725f1 (bug 1613705)
Backed out changeset c9cfbba15d90 (bug 1613705)

UltraBlame original commit: 87e93141e0869f6da5b08f3ba1fd133bfe7d4433

--- a/dom/l10n/tests/mochitest/dom_localization/test_connectRoot_webcomponent.html
+++ b/dom/l10n/tests/mochitest/dom_localization/test_connectRoot_webcomponent.html
@@ -414,81 +414,47 @@ use
 strict
 "
 ;
+async
+function
+*
+generateBundles
+(
+resourceIds
+)
+{
 const
-l10nReg
+bundle
 =
 new
-L10nRegistry
+FluentBundle
 (
-)
-;
-const
-fs
-=
-[
-{
-path
-:
 "
-/
-localization
-/
 en
 -
 US
-/
-mock
-.
-ftl
 "
-source
-:
+)
+;
+bundle
+.
+addResource
+(
+new
+FluentResource
+(
 key1
 =
 Value
 for
 Key
 1
-}
-]
-;
-const
-source
-=
-L10nFileSource
-.
-createMock
-(
-"
-test
-"
-[
-"
-en
--
-US
-"
-]
-"
-/
-localization
-/
-{
-locale
-}
-"
-fs
+)
 )
 ;
-l10nReg
-.
-registerSources
-(
-[
-source
-]
-)
+yield
+bundle
 ;
+}
 document
 .
 domLoc
@@ -497,22 +463,11 @@ new
 DOMLocalization
 (
 [
-"
-/
-mock
-.
-ftl
-"
 ]
 false
-l10nReg
-[
-"
-en
--
-US
-"
-]
+{
+generateBundles
+}
 )
 ;
 <
