--- a/dom/l10n/tests/mochitest/dom_localization/test_domloc.xhtml
+++ b/dom/l10n/tests/mochitest/dom_localization/test_domloc.xhtml
@@ -143,35 +143,34 @@ javascript
 [
 CDATA
 [
+async
+function
+*
+generateBundles
+(
+resourceIds
+)
+{
 const
-l10nReg
+bundle
 =
 new
-L10nRegistry
+FluentBundle
 (
-)
-;
-const
-fs
-=
-[
-{
-path
-:
 "
-/
-localization
-/
 en
 -
 US
-/
-mock
-.
-ftl
 "
-source
-:
+)
+;
+bundle
+.
+addResource
+(
+new
+FluentResource
+(
 file
 -
 menu
@@ -218,46 +217,13 @@ foo
 inside
 it
 .
-}
-]
-;
-const
-source
-=
-L10nFileSource
-.
-createMock
-(
-"
-test
-"
-[
-"
-en
--
-US
-"
-]
-"
-/
-localization
-/
-{
-locale
-}
-"
-fs
+)
 )
 ;
-l10nReg
-.
-registerSources
-(
-[
-source
-]
-)
+yield
+bundle
 ;
+}
 SimpleTest
 .
 waitForExplicitFinish
@@ -273,14 +239,9 @@ DOMLocalization
 [
 ]
 false
-l10nReg
-[
-"
-en
--
-US
-"
-]
+{
+generateBundles
+}
 )
 ;
 async
@@ -295,8 +256,7 @@ addResourceIds
 (
 [
 "
-/
-mock
+dummy
 .
 ftl
 "
