--- a/dom/l10n/tests/mochitest/dom_localization/test_overlay.html
+++ b/dom/l10n/tests/mochitest/dom_localization/test_overlay.html
@@ -107,35 +107,35 @@ use
 strict
 "
 ;
+async
+function
+*
+generateBundles
+(
+resourceIds
+)
+{
 const
-l10nReg
+bundle
 =
 new
-L10nRegistry
+FluentBundle
 (
-)
-;
-const
-fs
-=
-[
-{
-path
-:
 "
-/
-localization
-/
 en
 -
 US
-/
-mock
-.
-ftl
 "
-source
-:
+)
+;
+bundle
+.
+addResource
+(
+new
+FluentResource
+(
+"
 title
 =
 <
@@ -147,6 +147,17 @@ Hello
 strong
 >
 World
+"
+)
+)
+;
+bundle
+.
+addResource
+(
+new
+FluentResource
+(
 title2
 =
 This
@@ -170,46 +181,13 @@ link
 a
 >
 !
-}
-]
-;
-const
-source
-=
-L10nFileSource
-.
-createMock
-(
-"
-test
-"
-[
-"
-en
--
-US
-"
-]
-"
-/
-localization
-/
-{
-locale
-}
-"
-fs
+)
 )
 ;
-l10nReg
-.
-registerSources
-(
-[
-source
-]
-)
+yield
+bundle
 ;
+}
 window
 .
 onload
@@ -232,22 +210,11 @@ new
 DOMLocalization
 (
 [
-"
-/
-mock
-.
-ftl
-"
 ]
 false
-l10nReg
-[
-"
-en
--
-US
-"
-]
+{
+generateBundles
+}
 )
 ;
 const
