--- a/dom/l10n/tests/mochitest/dom_localization/test_overlay_missing_all.html
+++ b/dom/l10n/tests/mochitest/dom_localization/test_overlay_missing_all.html
@@ -107,14 +107,36 @@ use
 strict
 "
 ;
+async
+function
+*
+generateBundles
+(
+resourceIds
+)
+{
 const
-l10nReg
+bundle
 =
 new
-L10nRegistry
+FluentBundle
 (
+"
+en
+-
+US
+"
 )
 ;
+/
+/
+No
+translations
+!
+yield
+bundle
+;
+}
 SimpleTest
 .
 waitForExplicitFinish
@@ -138,14 +160,9 @@ DOMLocalization
 [
 ]
 false
-l10nReg
-[
-"
-en
--
-US
-"
-]
+{
+generateBundles
+}
 )
 ;
 await
