--- a/dom/l10n/tests/mochitest/dom_localization/test_translateFragment.html
+++ b/dom/l10n/tests/mochitest/dom_localization/test_translateFragment.html
@@ -107,84 +107,64 @@ use
 strict
 "
 ;
+async
+function
+*
+generateBundles
+(
+resourceIds
+)
+{
 const
-l10nReg
+bundle
 =
 new
-L10nRegistry
+FluentBundle
 (
-)
-;
-const
-fs
-=
-[
-{
-path
-:
 "
-/
-localization
-/
 en
 -
 US
-/
-mock
-.
-ftl
 "
-source
-:
+)
+;
+bundle
+.
+addResource
+(
+new
+FluentResource
+(
+"
 title
 =
 Hello
 World
+"
+)
+)
+;
+bundle
+.
+addResource
+(
+new
+FluentResource
+(
+"
 subtitle
 =
 Welcome
 to
 FluentBundle
-}
-]
-;
-const
-source
-=
-L10nFileSource
-.
-createMock
-(
 "
-test
-"
-[
-"
-en
--
-US
-"
-]
-"
-/
-localization
-/
-{
-locale
-}
-"
-fs
+)
 )
 ;
-l10nReg
-.
-registerSources
-(
-[
-source
-]
-)
+yield
+bundle
 ;
+}
 window
 .
 onload
@@ -207,22 +187,11 @@ new
 DOMLocalization
 (
 [
-"
-/
-mock
-.
-ftl
-"
 ]
 false
-l10nReg
-[
-"
-en
--
-US
-"
-]
+{
+generateBundles
+}
 )
 ;
 const
