--- a/intl/l10n/test/mochitest/localization/test_formatMessages.html
+++ b/intl/l10n/test/mochitest/localization/test_formatMessages.html
@@ -108,50 +108,39 @@ use
 strict
 "
 ;
+async
+function
+*
+generateBundles
+(
+resourceIds
+)
+{
 const
-mockSource
+bundle
 =
-L10nFileSource
-.
-createMock
+new
+FluentBundle
 (
 "
-test
-"
-[
-"
 en
 -
 US
 "
-]
-"
-/
-localization
-/
 {
-locale
+useIsolating
+:
+false
 }
-/
-"
-[
-{
-path
-:
-"
-/
-localization
-/
-en
--
-US
-/
-mock
+)
+;
+bundle
 .
-ftl
-"
-source
-:
+addResource
+(
+new
+FluentResource
+(
 key1
 =
 Value
@@ -177,36 +166,13 @@ for
 {
 user
 }
-}
-]
+)
 )
 ;
-let
-registry
-=
-new
-L10nRegistry
-(
-{
-bundleOptions
-:
-{
-useIsolating
-:
-false
-}
-}
-)
+yield
+bundle
 ;
-registry
-.
-registerSources
-(
-[
-mockSource
-]
-)
-;
+}
 function
 getAttributeByName
 (
@@ -259,7 +225,9 @@ ftl
 '
 ]
 false
-registry
+{
+generateBundles
+}
 )
 ;
 {
@@ -510,8 +478,6 @@ e
 is
 (
 e
-.
-message
 "
 [
 fluent
@@ -534,6 +500,7 @@ Unknown
 variable
 :
 user
+.
 "
 "
 Missing
@@ -610,21 +577,19 @@ e
 is
 (
 e
-.
-message
 "
 [
 fluent
 ]
 Missing
-message
+translations
 in
-locale
 en
 -
 US
 :
 key4
+.
 "
 "
 Missing
