--- a/intl/l10n/test/mochitest/localization/test_formatValue.html
+++ b/intl/l10n/test/mochitest/localization/test_formatValue.html
@@ -108,50 +108,39 @@ use
 strict
 "
 ;
+async
+function
+*
+generateBundles
+(
+resourceIds
+)
+{
 const
-mockSource
+bundle
 =
-L10nFileSource
-.
-createMock
+new
+FluentBundle
 (
 "
-test
-"
-[
-"
 en
 -
 US
 "
-]
-"
-/
-localization
-/
 {
-locale
+useIsolating
+:
+false
 }
-/
-"
-[
-{
-path
-:
-"
-/
-localization
-/
-en
--
-US
-/
-mock
+)
+;
+bundle
 .
-ftl
-"
-source
-:
+addResource
+(
+new
+FluentResource
+(
 key1
 =
 Value
@@ -167,36 +156,13 @@ Value
 {
 count
 }
-}
-]
+)
 )
 ;
-let
-registry
-=
-new
-L10nRegistry
-(
-{
-bundleOptions
-:
-{
-useIsolating
-:
-false
-}
-}
-)
+yield
+bundle
 ;
-registry
-.
-registerSources
-(
-[
-mockSource
-]
-)
-;
+}
 (
 async
 (
@@ -224,7 +190,9 @@ ftl
 '
 ]
 false
-registry
+{
+generateBundles
+}
 )
 ;
 {
@@ -396,8 +364,6 @@ e
 is
 (
 e
-.
-message
 "
 [
 fluent
@@ -420,6 +386,7 @@ Unknown
 variable
 :
 count
+.
 "
 "
 Missing
