--- a/dom/l10n/tests/mochitest/dom_localization/test_getAttributes.html
+++ b/dom/l10n/tests/mochitest/dom_localization/test_getAttributes.html
@@ -107,6 +107,15 @@ use
 strict
 "
 ;
+async
+function
+*
+generateBundles
+(
+resourceIds
+)
+{
+}
 window
 .
 onload
@@ -130,6 +139,9 @@ DOMLocalization
 [
 ]
 false
+{
+generateBundles
+}
 )
 ;
 const
