--- a/dom/l10n/tests/mochitest/dom_localization/test_l10n_mutations.html
+++ b/dom/l10n/tests/mochitest/dom_localization/test_l10n_mutations.html
@@ -106,84 +106,64 @@ use
 strict
 "
 ;
+async
+function
+*
+generateBundles
+(
+resourceIds
+)
+{
 const
-l10nReg
+bundle
 =
 new
-L10nRegistry
+FluentBundle
 (
-)
-;
-const
-fs
-=
-[
-{
-path
-:
 "
-/
-localization
-/
 en
 -
 US
-/
-mock
-.
-ftl
 "
-source
-:
+)
+;
+bundle
+.
+addResource
+(
+new
+FluentResource
+(
+"
 title
 =
 Hello
 World
+"
+)
+)
+;
+bundle
+.
+addResource
+(
+new
+FluentResource
+(
+"
 title2
 =
 Hello
 Another
 World
-}
-]
-;
-const
-source
-=
-L10nFileSource
-.
-createMock
-(
 "
-test
-"
-[
-"
-en
--
-US
-"
-]
-"
-/
-localization
-/
-{
-locale
-}
-"
-fs
+)
 )
 ;
-l10nReg
-.
-registerSources
-(
-[
-source
-]
-)
+yield
+bundle
 ;
+}
 window
 .
 onload
@@ -208,14 +188,9 @@ DOMLocalization
 [
 ]
 false
-l10nReg
-[
-"
-en
--
-US
-"
-]
+{
+generateBundles
+}
 )
 ;
 const
@@ -239,8 +214,7 @@ addResourceIds
 (
 [
 "
-/
-mock
+dummy
 .
 ftl
 "
