--- a/dom/l10n/tests/mochitest/dom_localization/test_overlay_missing_children.html
+++ b/dom/l10n/tests/mochitest/dom_localization/test_overlay_missing_children.html
@@ -107,35 +107,34 @@ use
 strict
 "
 ;
+async
+function
+*
+generateBundles
+(
+resourceIds
+)
+{
 const
-l10nReg
+bundle
 =
 new
-L10nRegistry
+FluentBundle
 (
-)
-;
-const
-fs
-=
-[
-{
-path
-:
 "
-/
-localization
-/
 en
 -
 US
-/
-mock
-.
-ftl
 "
-source
-:
+)
+;
+bundle
+.
+addResource
+(
+new
+FluentResource
+(
 title
 =
 Visit
@@ -180,46 +179,13 @@ a
 >
 website
 !
-}
-]
-;
-const
-source
-=
-L10nFileSource
-.
-createMock
-(
-"
-test
-"
-[
-"
-en
--
-US
-"
-]
-"
-/
-localization
-/
-{
-locale
-}
-"
-fs
+)
 )
 ;
-l10nReg
-.
-registerSources
-(
-[
-source
-]
-)
+yield
+bundle
 ;
+}
 window
 .
 onload
@@ -242,22 +208,11 @@ new
 DOMLocalization
 (
 [
-"
-/
-mock
-.
-ftl
-"
 ]
 false
-l10nReg
-[
-"
-en
--
-US
-"
-]
+{
+generateBundles
+}
 )
 ;
 await
