--- a/dom/l10n/tests/mochitest/dom_localization/test_setAttributes.html
+++ b/dom/l10n/tests/mochitest/dom_localization/test_setAttributes.html
@@ -107,14 +107,15 @@ use
 strict
 "
 ;
-const
-l10nReg
-=
-new
-L10nRegistry
+async
+function
+*
+generateBundles
 (
+resourceIds
 )
-;
+{
+}
 window
 .
 onload
@@ -138,7 +139,9 @@ DOMLocalization
 [
 ]
 false
-l10nReg
+{
+generateBundles
+}
 )
 ;
 const
