--- a/dom/l10n/tests/mochitest/dom_localization/test_translateElements.html
+++ b/dom/l10n/tests/mochitest/dom_localization/test_translateElements.html
@@ -107,86 +107,68 @@ use
 strict
 "
 ;
+async
+function
+*
+generateBundles
+(
+resourceIds
+)
+{
 const
-l10nReg
+bundle
 =
 new
-L10nRegistry
+FluentBundle
 (
-)
-;
-const
-fs
-=
-[
-{
-path
-:
 "
-/
-localization
-/
 en
 -
 US
-/
-mock
-.
-ftl
 "
-source
-:
+)
+;
+bundle
+.
+addResource
+(
+new
+FluentResource
+(
+"
 title
 =
 Hello
 World
+"
+)
+)
+;
+bundle
+.
+addResource
+(
+new
+FluentResource
+(
+"
 link
 =
+\
+n
 .
 title
 =
 Click
 me
-}
-]
-;
-const
-source
-=
-L10nFileSource
-.
-createMock
-(
 "
-test
-"
-[
-"
-en
--
-US
-"
-]
-"
-/
-localization
-/
-{
-locale
-}
-"
-fs
+)
 )
 ;
-l10nReg
-.
-registerSources
-(
-[
-source
-]
-)
+yield
+bundle
 ;
+}
 window
 .
 onload
@@ -209,22 +191,11 @@ new
 DOMLocalization
 (
 [
-"
-/
-mock
-.
-ftl
-"
 ]
 false
-l10nReg
-[
-"
-en
--
-US
-"
-]
+{
+generateBundles
+}
 )
 ;
 const
