Bug 1703630 - update mac reftests for proton and remove last proton media queries from toolkit, r=jaws
Differential Revision: https://phabricator.services.mozilla.com/D121204

UltraBlame original commit: 664f97f70341139e3c362d559d63a4f559373c40

--- a/toolkit/themes/osx/reftests/checkboxsize.xhtml
+++ b/toolkit/themes/osx/reftests/checkboxsize.xhtml
@@ -133,6 +133,11 @@ hbox
 >
 <
 checkbox
+native
+=
+"
+true
+"
 label
 =
 "
@@ -165,6 +170,11 @@ hbox
 >
 <
 checkbox
+native
+=
+"
+true
+"
 label
 =
 "
@@ -198,6 +208,11 @@ hbox
 >
 <
 checkbox
+native
+=
+"
+true
+"
 label
 =
 "
@@ -230,6 +245,11 @@ hbox
 >
 <
 checkbox
+native
+=
+"
+true
+"
 label
 =
 "
@@ -267,6 +287,11 @@ hbox
 >
 <
 checkbox
+native
+=
+"
+true
+"
 label
 =
 "
@@ -305,6 +330,11 @@ hbox
 >
 <
 checkbox
+native
+=
+"
+true
+"
 label
 =
 "
