--- a/dom/events/test/test_coalesce_mousewheel.html
+++ b/dom/events/test/test_coalesce_mousewheel.html
@@ -118,14 +118,16 @@ css
 <
 script
 >
-var
-mousewheelCount
+let
+wheelEvents
 =
-0
+[
+]
 ;
 function
 mousewheel
 (
+aWheelEvent
 )
 {
 /
@@ -158,9 +160,12 @@ start
 )
 )
 ;
-+
-+
-mousewheelCount
+wheelEvents
+.
+push
+(
+aWheelEvent
+)
 ;
 }
 function
@@ -172,7 +177,9 @@ minamount
 {
 if
 (
-mousewheelCount
+wheelEvents
+.
+length
 >
 =
 minamount
@@ -201,7 +208,6 @@ function
 {
 resolve
 (
-mousewheelCount
 )
 ;
 }
@@ -228,15 +234,174 @@ minamount
 ;
 }
 }
+const
+kLineDeltaFactor
+=
+SpecialPowers
+.
+getBoolPref
+(
+"
+mousewheel
+.
+system_scroll_override
+.
+enabled
+"
+false
+)
+?
+SpecialPowers
+.
+getIntPref
+(
+"
+mousewheel
+.
+system_scroll_override
+.
+vertical
+.
+factor
+"
+200
+)
+/
+100
+:
+1
+;
+function
+checkWheelEvents
+(
+aExpectedDeltaMode
+aExpectedSumOfDeltaY
+aDescription
+)
+{
+const
+lineDeltaFactor
+=
+aExpectedDeltaMode
+=
+=
+=
+WheelEvent
+.
+DOM_DELTA_LINE
+?
+kLineDeltaFactor
+:
+1
+;
+let
+succeeded
+=
+true
+;
+let
+deltaY
+=
+0
+;
+for
+(
+const
+wheelEvent
+of
+wheelEvents
+)
+{
+succeeded
+&
+=
+wheelEvent
+.
+deltaMode
+=
+=
+=
+aExpectedDeltaMode
+;
+is
+(
+wheelEvent
+.
+deltaMode
+aExpectedDeltaMode
+When
+{
+aDescription
+}
+the
+deltaMode
+of
+all
+wheel
+events
+should
+be
+{
+aExpectedDeltaMode
+}
+)
+;
+deltaY
++
+=
+wheelEvent
+.
+deltaY
+;
+}
+succeeded
+&
+=
+deltaY
+=
+=
+aExpectedSumOfDeltaY
+*
+lineDeltaFactor
+;
+is
+(
+deltaY
+aExpectedSumOfDeltaY
+*
+lineDeltaFactor
+When
+{
+aDescription
+}
+sum
+of
+the
+deltaY
+of
+all
+wheel
+events
+should
+be
+{
+aExpectedSumOfDeltaY
+*
+lineDeltaFactor
+}
+)
+;
+return
+succeeded
+;
+}
 async
 function
-fireOneSingleWheelEvent
+testOneSingleWheelEvent
 (
 )
 {
-var
-ret
-=
+await
 new
 Promise
 (
@@ -245,9 +410,10 @@ function
 resolve
 )
 {
-mousewheelCount
+wheelEvents
 =
-0
+[
+]
 ;
 var
 element
@@ -309,18 +475,119 @@ resolve
 }
 )
 ;
-return
-ret
+is
+(
+wheelEvents
+.
+length
+1
+"
+Synthesizing
+a
+wheel
+event
+via
+the
+parent
+process
+should
+cause
+1
+wheel
+event
+"
+)
+;
+is
+(
+wheelEvents
+[
+0
+]
+?
+.
+deltaMode
+WheelEvent
+.
+DOM_DELTA_LINE
+"
+When
+Synthesizing
+a
+wheel
+event
+via
+the
+parent
+process
+the
+deltaMode
+of
+a
+wheel
+event
+should
+be
+WheelEvent
+.
+DOM_DELTA_LINE
+"
+)
+;
+is
+(
+wheelEvents
+[
+0
+]
+?
+.
+deltaY
+3
+*
+kLineDeltaFactor
+When
+Synthesizing
+a
+wheel
+event
+via
+the
+parent
+process
+the
+deltaY
+of
+a
+wheel
+event
+should
+be
+{
+3
+*
+kLineDeltaFactor
 }
+)
+;
+}
+const
+kMaxRetry
+=
+10
+;
 async
 function
-fireTwoSingleWheelEvents
+testTwoSingleWheelEvents
 (
 )
 {
-var
-ret
-=
+function
+tryIt
+(
+)
+{
+return
 new
 Promise
 (
@@ -329,9 +596,27 @@ function
 resolve
 )
 {
-mousewheelCount
+info
+(
+"
+Synthesizing
+2
+wheel
+events
+via
+the
+parent
+process
+.
+.
+.
+"
+)
+;
+wheelEvents
 =
-0
+[
+]
 ;
 var
 element
@@ -412,18 +697,152 @@ resolve
 }
 )
 ;
+}
+for
+(
+let
+i
+=
+0
+;
+i
+<
+kMaxRetry
+;
+i
++
++
+)
+{
+await
+tryIt
+(
+)
+;
+if
+(
+wheelEvents
+.
+length
+=
+=
+2
+)
+{
+/
+/
+Even
+if
+failed
+to
+coalescing
+the
+sum
+of
+deltaY
+values
+should
+be
+same
+/
+/
+as
+sum
+of
+the
+synthesized
+ones
+.
+if
+(
+!
+checkWheelEvents
+(
+WheelEvent
+.
+DOM_DELTA_LINE
+6
+"
+synthesizing
+2
+wheel
+events
+via
+the
+parent
+process
+"
+)
+)
+{
 return
-ret
+false
+;
+}
+continue
+;
+/
+/
+retry
+}
+is
+(
+wheelEvents
+.
+length
+1
+"
+Synthesizing
+2
+wheel
+events
+via
+the
+parent
+process
+should
+cause
+only
+1
+wheel
+event
+"
+)
+;
+checkWheelEvents
+(
+WheelEvent
+.
+DOM_DELTA_LINE
+6
+"
+synthesizing
+2
+wheel
+events
+via
+the
+parent
+process
+"
+)
+;
+return
+;
+}
 }
 async
 function
-fireManySingleWheelEvents
+testManySingleWheelEvents
 (
 )
 {
-var
-ret
-=
+function
+tryIt
+(
+)
+{
+return
 new
 Promise
 (
@@ -432,9 +851,27 @@ function
 resolve
 )
 {
-mousewheelCount
+info
+(
+"
+Synthesizing
+5
+wheel
+events
+via
+the
+parent
+process
+.
+.
+.
+"
+)
+;
+wheelEvents
 =
-0
+[
+]
 ;
 var
 element
@@ -572,18 +1009,159 @@ resolve
 }
 )
 ;
+}
+for
+(
+let
+i
+=
+0
+;
+i
+<
+kMaxRetry
+;
+i
++
++
+)
+{
+await
+tryIt
+(
+)
+;
+if
+(
+wheelEvents
+.
+length
+>
+1
+&
+&
+wheelEvents
+.
+length
+<
+=
+5
+)
+{
+/
+/
+Even
+if
+failed
+to
+coalescing
+the
+sum
+of
+deltaY
+values
+should
+be
+same
+/
+/
+as
+sum
+of
+the
+synthesized
+ones
+.
+if
+(
+!
+checkWheelEvents
+(
+WheelEvent
+.
+DOM_DELTA_LINE
+15
+"
+synthesizing
+5
+wheel
+events
+via
+the
+parent
+process
+"
+)
+)
+{
 return
-ret
+false
+;
+}
+continue
+;
+/
+/
+retry
+}
+is
+(
+wheelEvents
+.
+length
+1
+"
+Synthesizing
+5
+wheel
+events
+via
+the
+parent
+process
+should
+cause
+only
+1
+wheel
+event
+"
+)
+;
+checkWheelEvents
+(
+WheelEvent
+.
+DOM_DELTA_LINE
+15
+"
+synthesizing
+5
+wheel
+events
+via
+the
+parent
+process
+"
+)
+;
+return
+;
+}
 }
 async
 function
-fireMixedWheelEvents
+testMixedWheelEvents
 (
 )
 {
-var
-ret
-=
+function
+tryIt
+(
+)
+{
+return
 new
 Promise
 (
@@ -592,9 +1170,33 @@ function
 resolve
 )
 {
-mousewheelCount
+info
+(
+"
+Synthesizing
+2
+line
+wheel
+events
+1
+page
+wheel
+event
+and
+1
+line
+wheel
+event
+.
+.
+.
+"
+)
+;
+wheelEvents
 =
-0
+[
+]
 ;
 var
 element
@@ -713,8 +1315,418 @@ resolve
 }
 )
 ;
+}
+function
+checkGroupsOfWheelEvents
+(
+)
+{
+let
+succeeded
+=
+true
+;
+let
+deltaY
+=
+[
+0
+0
+0
+]
+;
+let
+index
+=
+0
+;
+const
+description
+=
+"
+synthesizing
+2
+line
+wheel
+events
+1
+page
+wheel
+event
+and
+1
+line
+wheel
+event
+"
+;
+for
+(
+const
+wheelEvent
+of
+wheelEvents
+)
+{
+switch
+(
+index
+)
+{
+case
+0
+:
+if
+(
+wheelEvent
+.
+deltaMode
+=
+=
+=
+WheelEvent
+.
+DOM_DELTA_LINE
+)
+{
+is
+(
+wheelEvent
+.
+deltaMode
+WheelEvent
+.
+DOM_DELTA_LINE
+When
+{
+description
+}
+the
+deltaMode
+of
+the
+first
+group
+should
+be
+WheelEvent
+.
+DOM_DELTA_LINE
+)
+;
+break
+;
+}
+index
++
++
+;
+/
+/
+fallthrough
+case
+1
+:
+if
+(
+wheelEvent
+.
+deltaMode
+=
+=
+=
+WheelEvent
+.
+DOM_DELTA_PAGE
+)
+{
+is
+(
+wheelEvent
+.
+deltaMode
+WheelEvent
+.
+DOM_DELTA_PAGE
+When
+{
+description
+}
+the
+deltaMode
+of
+the
+seconde
+group
+should
+be
+WheelEvent
+.
+DOM_DELTA_PAGE
+)
+;
+break
+;
+}
+index
++
++
+;
+/
+/
+fallthrough
+case
+2
+:
+succeeded
+&
+=
+wheelEvent
+.
+deltaMode
+=
+=
+=
+WheelEvent
+.
+DOM_DELTA_LINE
+;
+is
+(
+wheelEvent
+.
+deltaMode
+WheelEvent
+.
+DOM_DELTA_LINE
+When
+{
+description
+}
+the
+deltaMode
+of
+the
+last
+group
+should
+be
+WheelEvent
+.
+DOM_DELTA_LINE
+)
+;
+break
+;
+}
+deltaY
+[
+index
+]
++
+=
+wheelEvent
+.
+deltaY
+;
+}
+succeeded
+&
+=
+deltaY
+=
+=
+[
+6
+*
+kLineDeltaFactor
+3
+3
+*
+kLineDeltaFactor
+]
+;
+isDeeply
+(
+deltaY
+[
+6
+*
+kLineDeltaFactor
+3
+3
+*
+kLineDeltaFactor
+]
+When
+{
+description
+}
+sum
+of
+the
+deltaY
+of
+the
+each
+wheel
+event
+group
+should
+be
+same
+as
+sum
+of
+the
+synthesized
+ones
+)
+;
 return
-ret
+succeeded
+;
+}
+for
+(
+let
+i
+=
+0
+;
+i
+<
+kMaxRetry
+;
+i
++
++
+)
+{
+await
+tryIt
+(
+)
+;
+if
+(
+wheelEvents
+.
+length
+!
+=
+3
+&
+&
+wheelEvents
+.
+length
+>
+1
+&
+&
+wheelEvents
+.
+length
+<
+=
+5
+)
+{
+/
+/
+Even
+if
+failed
+to
+coalescing
+the
+sum
+of
+deltaY
+values
+should
+be
+same
+/
+/
+as
+sum
+of
+the
+synthesized
+ones
+and
+the
+wheel
+events
+shouldn
+'
+t
+be
+/
+/
+reordered
+.
+if
+(
+!
+checkGroupsOfWheelEvents
+(
+)
+)
+{
+return
+false
+;
+}
+continue
+;
+/
+/
+retry
+}
+is
+(
+wheelEvents
+.
+length
+3
+"
+Synthesizing
+2
+line
+wheel
+events
+1
+page
+wheel
+event
+and
+1
+line
+wheel
+event
+via
+the
+parent
+process
+should
+cause
+only
+3
+wheel
+events
+"
+)
+;
+checkGroupsOfWheelEvents
+(
+)
+;
+return
+;
+}
 }
 async
 function
@@ -734,6 +1746,38 @@ window
 .
 asyncPanZoomEnabled
 ;
+/
+/
+Avoid
+synthesized
+mousemove
+events
+to
+be
+fired
+at
+the
+system
+cursor
+.
+await
+promiseNativeMouseEvent
+(
+{
+type
+:
+"
+mousemove
+"
+screenX
+:
+0
+screenY
+:
+0
+}
+)
+;
 await
 SpecialPowers
 .
@@ -752,6 +1796,20 @@ events
 async
 .
 enabled
+"
+true
+]
+[
+"
+dom
+.
+event
+.
+wheel
+-
+coalesced
+.
+testing
 "
 true
 ]
@@ -791,92 +1849,24 @@ enabled
 }
 )
 ;
-var
-oneMouseWheels
-=
 await
-fireOneSingleWheelEvent
+testOneSingleWheelEvent
 (
 )
 ;
-is
-(
-oneMouseWheels
-1
-"
-Should
-have
-gotten
-1
-wheel
-event
-"
-)
-;
-var
-twoMouseWheelsWithCoalescing
-=
 await
-fireTwoSingleWheelEvents
+testTwoSingleWheelEvents
 (
 )
 ;
-is
-(
-twoMouseWheelsWithCoalescing
-1
-"
-Should
-have
-gotten
-1
-wheel
-event
-"
-)
-;
-var
-manyMouseWheelsWithCoalescing
-=
 await
-fireManySingleWheelEvents
+testManySingleWheelEvents
 (
 )
 ;
-is
-(
-manyMouseWheelsWithCoalescing
-1
-"
-Should
-have
-gotten
-1
-wheel
-event
-"
-)
-;
-var
-mixedMouseWheelsWithCoalescing
-=
 await
-fireMixedWheelEvents
+testMixedWheelEvents
 (
-)
-;
-is
-(
-mixedMouseWheelsWithCoalescing
-3
-"
-Should
-have
-got
-3
-wheel
-event
-"
 )
 ;
 setTimeout
