Bug 1715482 - Geolocation should gracefully handle Documents that are not fully active r=saschanaz
Spec change https://github.com/w3c/geolocation-api/pull/97

Differential Revision: https://phabricator.services.mozilla.com/D117273

UltraBlame original commit: aa23b80472a78fecd64faa6a41ba5f4daf6e3044

--- a/dom/tests/mochitest/chrome/test_geolocation.xhtml
+++ b/dom/tests/mochitest/chrome/test_geolocation.xhtml
@@ -127,13 +127,6 @@ xul
 >
 <
 script
-type
-=
-"
-application
-/
-javascript
-"
 src
 =
 "
@@ -167,7 +160,22 @@ waitForExplicitFinish
 (
 )
 ;
-var
+async
+function
+test
+(
+)
+{
+/
+*
+*
+type
+{
+Geolocation
+}
+*
+/
+const
 geolocation
 =
 Cc
@@ -190,35 +198,134 @@ Ci
 nsISupports
 )
 ;
+try
+{
+/
+/
+Watch
+position
+let
+watchId
+;
+let
+position
+=
+await
+new
+Promise
+(
+(
+resolve
+reject
+)
+=
+>
+{
+watchId
+=
+geolocation
+.
+watchPosition
+(
+resolve
+reject
+{
+timeout
+:
+0
+}
+)
+;
+}
+)
+;
+ok
+(
+position
+"
+watchPosition
+(
+)
+callable
+from
+chrome
+"
+)
+;
+geolocation
+.
+clearWatch
+(
+watchId
+)
+;
+/
+/
+Get
+position
+position
+=
+await
+new
+Promise
+(
+(
+resolve
+reject
+)
+=
+>
 geolocation
 .
 getCurrentPosition
 (
-done
-error
+resolve
+reject
+)
 )
 ;
-function
-error
+ok
 (
-error
+position
+"
+getCurrentPosition
+(
+)
+callable
+from
+chrome
+"
+)
+;
+}
+catch
+(
+err
 )
 {
 ok
 (
-0
+false
 "
 error
-occured
+occurred
 trying
 to
 get
 geolocation
 from
 chrome
+:
 "
++
+err
+.
+message
 )
 ;
+}
+finally
+{
 SimpleTest
 .
 finish
@@ -226,30 +333,6 @@ finish
 )
 ;
 }
-function
-done
-(
-position
-)
-{
-ok
-(
-position
-"
-geolocation
-was
-found
-from
-chrome
-"
-)
-;
-SimpleTest
-.
-finish
-(
-)
-;
 }
 <
 /
@@ -285,6 +368,13 @@ overflow
 :
 auto
 ;
+"
+onload
+=
+"
+test
+(
+)
 "
 /
 >
