Bug 1723476: Update tests within dom/html to work with https-first enabled r=smaug
Differential Revision: https://phabricator.services.mozilla.com/D121510

UltraBlame original commit: ffa2de14cccca2521a4a3b22332908056844024a

--- a/dom/html/test/test_bug481335.xhtml
+++ b/dom/html/test/test_bug481335.xhtml
@@ -138,12 +138,10 @@ base
 href
 =
 "
-http
+https
 :
 /
 /
-www
-.
 example
 .
 com
@@ -384,12 +382,10 @@ t
 .
 href
 "
-http
+https
 :
 /
 /
-www
-.
 example
 .
 com
@@ -415,12 +411,10 @@ t
 .
 href
 "
-http
+https
 :
 /
 /
-www
-.
 example
 .
 com
@@ -619,12 +613,10 @@ t
 .
 href
 "
-http
+https
 :
 /
 /
-www
-.
 example
 .
 com
@@ -650,12 +642,10 @@ t
 .
 href
 "
-http
+https
 :
 /
 /
-www
-.
 example
 .
 com
