Bug 1722986: Update tests within netwerk/ to work with https-first enabled r=dragana
Differential Revision: https://phabricator.services.mozilla.com/D121237

UltraBlame original commit: 916b1ca9a384caee5b1da3e3133204633a6925b0

--- a/netwerk/test/mochitests/file_image_inner_inner.html
+++ b/netwerk/test/mochitests/file_image_inner_inner.html
@@ -31,7 +31,7 @@ all
 href
 =
 "
-http
+https
 :
 /
 /
@@ -75,7 +75,7 @@ all
 href
 =
 "
-http
+https
 :
 /
 /
@@ -179,7 +179,7 @@ img
 src
 =
 "
-http
+https
 :
 /
 /
@@ -213,7 +213,7 @@ img
 src
 =
 "
-http
+https
 :
 /
 /
