Bug 1723110: Update tests within dom/media to work with https-first enabled r=bryce
Differential Revision: https://phabricator.services.mozilla.com/D121354

UltraBlame original commit: 60cc72bd6835b17fdeef66015567929f6869a303

--- a/dom/media/test/test_access_control.html
+++ b/dom/media/test/test_access_control.html
@@ -215,7 +215,7 @@ Bug
 *
 /
 function
-run
+openWindow
 (
 )
 {
@@ -256,6 +256,37 @@ height
 =
 500
 "
+)
+;
+}
+function
+run
+(
+)
+{
+SpecialPowers
+.
+pushPrefEnv
+(
+{
+"
+set
+"
+:
+[
+[
+"
+dom
+.
+security
+.
+https_first
+"
+false
+]
+]
+}
+openWindow
 )
 ;
 }
