Bug 1720185 - If a child is a member of name calc subtree, fire event on container when it changes. r=Jamie
Differential Revision: https://phabricator.services.mozilla.com/D119663

UltraBlame original commit: 083a278627e4829c67f2bed365a2f00521c577a9

--- a/accessible/tests/mochitest/events/test_namechange.html
+++ b/accessible/tests/mochitest/events/test_namechange.html
@@ -1245,6 +1245,45 @@ l2
 await
 nameChanged
 ;
+nameChanged
+=
+PromEvents
+.
+waitForEvent
+(
+EVENT_NAME_CHANGE
+"
+listitem
+"
+)
+;
+info
+(
+"
+Changing
+text
+of
+listitem
+child
+"
+)
+;
+getNode
+(
+"
+listitem
+"
+)
+.
+textContent
+=
+"
+world
+"
+;
+await
+nameChanged
+;
 SimpleTest
 .
 finish
@@ -1497,6 +1536,26 @@ p
 <
 /
 div
+>
+<
+ul
+>
+<
+li
+id
+=
+"
+listitem
+"
+>
+hello
+<
+/
+li
+>
+<
+/
+ul
 >
 <
 div
