Bug 1723972 - Don't process-switch for object/embed loads if we're falling back due to an error page. r=nika
Differential Revision: https://phabricator.services.mozilla.com/D121734

UltraBlame original commit: dd9db6a31aedc4836922286b84d99933c78e4630

--- a/testing/web-platform/tests/html/semantics/embedded-content/the-object-element/object-fallback-failed-cross-origin-navigation.sub.html
+++ b/testing/web-platform/tests/html/semantics/embedded-content/the-object-element/object-fallback-failed-cross-origin-navigation.sub.html
@@ -1,4 +1,3 @@
-n
 <
 !
 DOCTYPE
@@ -73,6 +72,10 @@ body
 <
 script
 >
+const
+URIS
+=
+[
 /
 /
 The
@@ -84,9 +87,6 @@ resource
 is
 unavailable
 .
-const
-cross_origin_url_a
-=
 "
 http
 :
@@ -120,7 +120,6 @@ foo
 .
 html
 "
-;
 /
 /
 The
@@ -134,9 +133,6 @@ the
 navigation
 fails
 .
-const
-cross_origin_url_b
-=
 "
 http
 :
@@ -170,86 +166,8 @@ foo
 .
 html
 "
+]
 ;
-/
-/
-Returns
-a
-promise
-which
-is
-resolved
-when
-|
-callback
-|
-returns
-true
-.
-The
-|
-callback
-|
-is
-invoked
-at
-/
-/
-every
-animation
-frame
-.
-function
-for_each_animation_frame
-(
-callback
-)
-{
-return
-new
-Promise
-(
-(
-resolve
-)
-=
->
-{
-function
-on_raf
-(
-)
-{
-if
-(
-!
-callback
-(
-)
-)
-resolve
-(
-)
-;
-window
-.
-requestAnimationFrame
-(
-on_raf
-)
-;
-}
-window
-.
-requestAnimationFrame
-(
-on_raf
-)
-;
-}
-)
-;
-}
 /
 /
 Create
@@ -266,6 +184,7 @@ function
 create_object_with_fallback
 (
 url
+t
 )
 {
 var
@@ -324,6 +243,68 @@ text
 html
 "
 ;
+let
+promise
+=
+new
+Promise
+(
+resolve
+=
+>
+{
+object
+.
+addEventListener
+(
+"
+load
+"
+t
+.
+unreached_func
+(
+"
+Should
+never
+reach
+the
+load
+event
+"
+)
+{
+once
+:
+true
+}
+)
+;
+object
+.
+addEventListener
+(
+"
+error
+"
+(
+)
+=
+>
+resolve
+(
+object
+)
+{
+once
+:
+true
+}
+)
+;
+}
+)
+;
 document
 .
 body
@@ -333,8 +314,23 @@ appendChild
 object
 )
 ;
-return
+t
+.
+add_cleanup
+(
+(
+)
+=
+>
 object
+.
+remove
+(
+)
+)
+;
+return
+promise
 ;
 }
 function
@@ -353,38 +349,85 @@ getBoundingClientRect
 )
 ;
 return
-el
+bounds
 .
 width
 *
-el
+bounds
 .
 height
 ;
 }
+for
+(
+let
+uri
+of
+URIS
+)
+{
 promise_test
 (
 async
 (
+t
 )
 =
 >
 {
-var
+let
 object
 =
+await
 create_object_with_fallback
 (
-cross_origin_url_a
+uri
+t
 )
 ;
+/
+/
+XXX
+In
+Chrome
+this
+is
+needed
+fallback
+doesn
+'
+t
+seem
+to
+be
+ready
+after
+/
+/
+the
+error
+event
+which
+seems
+weird
+/
+odd
+.
 await
-for_each_animation_frame
+new
+Promise
 (
-(
-)
+resolve
 =
 >
+requestAnimationFrame
+(
+resolve
+)
+)
+;
+assert_true
+(
 area
 (
 object
@@ -393,52 +436,189 @@ firstChild
 )
 >
 0
+"
+Should
+be
+showing
+fallback
+"
 )
 ;
-object
+/
+/
+Per
+https
+:
+/
+/
+html
 .
-parentElement
+spec
 .
-removeChild
-(
-object
-)
-;
-object
-=
-create_object_with_fallback
-(
-cross_origin_url_b
-)
-;
-await
-for_each_animation_frame
-(
-(
-)
-=
->
-area
-(
-object
+whatwg
 .
-firstChild
+org
+/
+#
+the
+-
+object
+-
+element
+:
+/
+/
+/
+/
+The
+object
+element
+can
+represent
+an
+external
+resource
+which
+/
+/
+depending
+on
+the
+type
+of
+the
+resource
+will
+either
+be
+treated
+as
+/
+/
+image
+as
+a
+child
+browsing
+context
+or
+as
+an
+external
+resource
+to
+/
+/
+be
+processed
+by
+a
+plugin
+.
+/
+/
+/
+/
+[
+.
+.
+.
+]
+/
+/
+/
+/
+If
+the
+load
+failed
+(
+e
+.
+g
+.
+there
+was
+an
+HTTP
+404
+error
+there
+was
+a
+/
+/
+DNS
+error
 )
->
+fire
+an
+event
+named
+error
+at
+the
+element
+then
+jump
+to
+/
+/
+the
+step
+below
+labeled
+fallback
+.
+/
+/
+/
+/
+(
+And
+that
+happens
+before
+"
+Determine
+the
+resource
+type
+"
+which
+is
+what
+/
+/
+sets
+the
+nested
+browsing
+context
+)
+.
+/
+/
+/
+/
+So
+the
+expected
+window
+.
+length
+is
 0
-)
-;
-object
 .
-parentElement
-.
-removeChild
+assert_equals
 (
-object
+window
+.
+length
+0
 )
 ;
 }
-"
 Verify
 fallback
 content
@@ -451,10 +631,13 @@ navigations
 is
 shown
 correctly
-.
-"
+:
+{
+uri
+}
 )
 ;
+}
 <
 /
 script
