Bug 1724043 - Port dialog cancel event tests to WPT. r=sefeng
Differential Revision: https://phabricator.services.mozilla.com/D121762

UltraBlame original commit: 8b81c3399a9ca1d3736d28637d23ae56a992b6c0

--- a/testing/web-platform/tests/html/semantics/interactive-elements/the-dialog-element/dialog-cancel-events.html
+++ b/testing/web-platform/tests/html/semantics/interactive-elements/the-dialog-element/dialog-cancel-events.html
@@ -1,157 +1,16 @@
 <
 !
 DOCTYPE
-HTML
+html
 >
 <
 html
 >
 <
-!
--
--
-https
-:
-/
-/
-bugzilla
-.
-mozilla
-.
-org
-/
-show_bug
-.
-cgi
-?
-id
-=
-1322947
--
--
->
-<
 head
 >
 <
 title
->
-Test
-for
-Bug
-1322947
-<
-/
-title
->
-<
-script
-src
-=
-"
-/
-tests
-/
-SimpleTest
-/
-SimpleTest
-.
-js
-"
->
-<
-/
-script
->
-<
-script
-src
-=
-"
-/
-tests
-/
-SimpleTest
-/
-EventUtils
-.
-js
-"
->
-<
-/
-script
->
-<
-link
-rel
-=
-"
-stylesheet
-"
-type
-=
-"
-text
-/
-css
-"
-href
-=
-"
-/
-tests
-/
-SimpleTest
-/
-test
-.
-css
-"
-/
->
-<
-/
-head
->
-<
-body
-onload
-=
-"
-runTest
-(
-)
-"
->
-<
-a
-target
-=
-"
-_blank
-"
-href
-=
-"
-https
-:
-/
-/
-bugzilla
-.
-mozilla
-.
-org
-/
-show_bug
-.
-cgi
-?
-id
-=
-1322947
-"
 >
 Test
 cancel
@@ -168,16 +27,149 @@ user
 interaction
 <
 /
-a
+title
+>
+<
+script
+src
+=
+"
+/
+resources
+/
+testharness
+.
+js
+"
+>
+<
+/
+script
+>
+<
+script
+src
+=
+"
+/
+resources
+/
+testharnessreport
+.
+js
+"
+>
+<
+/
+script
+>
+<
+script
+src
+=
+"
+/
+resources
+/
+testdriver
+.
+js
+"
+>
+<
+/
+script
+>
+<
+script
+src
+=
+"
+/
+resources
+/
+testdriver
+-
+vendor
+.
+js
+"
+>
+<
+/
+script
+>
+<
+script
+src
+=
+"
+/
+resources
+/
+testdriver
+-
+actions
+.
+js
+"
+>
+<
+/
+script
+>
+<
+link
+rel
+=
+"
+help
+"
+href
+=
+"
+https
+:
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+show_bug
+.
+cgi
+?
+id
+=
+1322947
+"
+>
+<
+/
+head
+>
+<
+body
 >
 <
 p
-id
-=
-"
-display
-"
 >
+Test
+cancel
+event
+is
+fired
+when
+the
+dialog
+is
+closed
+by
+user
+interaction
 <
 /
 p
@@ -199,27 +191,15 @@ p
 dialog
 >
 <
-pre
-id
-=
-"
-test
-"
->
-<
 script
-type
-=
-"
-application
-/
-javascript
-"
 >
-SimpleTest
-.
-waitForExplicitFinish
+setup
 (
+{
+single_test
+:
+true
+}
 )
 ;
 var
@@ -232,11 +212,6 @@ hasCloseEventFired
 =
 false
 ;
-function
-runTest
-(
-)
-{
 const
 dialog
 =
@@ -261,7 +236,7 @@ function
 event
 )
 {
-ok
+assert_true
 (
 true
 "
@@ -272,7 +247,7 @@ fired
 "
 )
 ;
-ok
+assert_true
 (
 event
 .
@@ -286,9 +261,8 @@ cancelable
 "
 )
 ;
-ok
+assert_false
 (
-!
 hasCancelEventFired
 "
 cancel
@@ -301,9 +275,8 @@ once
 "
 )
 ;
-ok
+assert_false
 (
-!
 hasCloseEventFired
 "
 close
@@ -335,7 +308,7 @@ function
 (
 )
 {
-ok
+assert_true
 (
 true
 "
@@ -346,9 +319,8 @@ fired
 "
 )
 ;
-ok
+assert_false
 (
-!
 hasCloseEventFired
 "
 close
@@ -361,7 +333,7 @@ once
 "
 )
 ;
-ok
+assert_true
 (
 hasCancelEventFired
 "
@@ -393,36 +365,38 @@ showModal
 (
 )
 ;
-synthesizeKey
-(
+const
+escKey
+=
 "
-VK_ESCAPE
+\
+uE00C
 "
-{
-}
-window
-)
 ;
-}
-function
-done
-(
-)
-{
-SimpleTest
+new
+test_driver
 .
-finish
+Actions
+(
+)
+.
+keyDown
+(
+escKey
+)
+.
+keyUp
+(
+escKey
+)
+.
+send
 (
 )
 ;
-}
 <
 /
 script
->
-<
-/
-pre
 >
 <
 /
