--- a/testing/web-platform/tests/html/semantics/interactive-elements/the-dialog-element/dialog-cancel-with-input.html
+++ b/testing/web-platform/tests/html/semantics/interactive-elements/the-dialog-element/dialog-cancel-with-input.html
@@ -1,34 +1,10 @@
 <
 !
 DOCTYPE
-HTML
->
-<
 html
 >
 <
-!
--
--
-https
-:
-/
-/
-bugzilla
-.
-mozilla
-.
-org
-/
-show_bug
-.
-cgi
-?
-id
-=
-1322947
--
--
+html
 >
 <
 head
@@ -37,9 +13,16 @@ head
 title
 >
 Test
-for
-Bug
-1322947
+dialog
+modal
+is
+closed
+by
+escape
+key
+with
+input
+focused
 <
 /
 title
@@ -50,11 +33,9 @@ src
 =
 "
 /
-tests
+resources
 /
-SimpleTest
-/
-SimpleTest
+testharness
 .
 js
 "
@@ -69,11 +50,64 @@ src
 =
 "
 /
-tests
+resources
 /
-SimpleTest
+testharnessreport
+.
+js
+"
+>
+<
 /
-EventUtils
+script
+>
+<
+script
+src
+=
+"
+/
+resources
+/
+testdriver
+.
+js
+"
+>
+<
+/
+script
+>
+<
+script
+src
+=
+"
+/
+resources
+/
+testdriver
+-
+vendor
+.
+js
+"
+>
+<
+/
+script
+>
+<
+script
+src
+=
+"
+/
+resources
+/
+testdriver
+-
+actions
 .
 js
 "
@@ -87,52 +121,7 @@ link
 rel
 =
 "
-stylesheet
-"
-type
-=
-"
-text
-/
-css
-"
-href
-=
-"
-/
-tests
-/
-SimpleTest
-/
-test
-.
-css
-"
-/
->
-<
-/
-head
->
-<
-body
-onload
-=
-"
-SimpleTest
-.
-waitForFocus
-(
-runTest
-)
-"
->
-<
-a
-target
-=
-"
-_blank
+help
 "
 href
 =
@@ -156,6 +145,16 @@ id
 1322947
 "
 >
+<
+/
+head
+>
+<
+body
+>
+<
+p
+>
 Test
 dialog
 modal
@@ -164,18 +163,9 @@ closed
 by
 escape
 key
-<
-/
-a
->
-<
-p
-id
-=
-"
-display
-"
->
+with
+input
+focused
 <
 /
 p
@@ -219,28 +209,55 @@ autofocus
 dialog
 >
 <
-pre
-id
-=
-"
-test
-"
->
-<
 script
-type
-=
-"
-application
-/
-javascript
-"
 >
-SimpleTest
-.
-waitForExplicitFinish
+setup
+(
+{
+single_test
+:
+true
+}
+)
+;
+const
+triggerEscKey
+=
 (
 )
+=
+>
+{
+const
+escKey
+=
+"
+\
+uE00C
+"
+;
+new
+test_driver
+.
+Actions
+(
+)
+.
+keyDown
+(
+escKey
+)
+.
+keyUp
+(
+escKey
+)
+.
+send
+(
+)
+;
+}
 ;
 /
 *
@@ -300,11 +317,11 @@ function
 (
 )
 {
-ok
+assert_false
 (
 dialog
 .
-close
+open
 "
 dialog
 with
@@ -328,7 +345,7 @@ showModal
 (
 )
 ;
-ok
+assert_true
 (
 input
 =
@@ -345,22 +362,11 @@ focused
 "
 )
 ;
-synthesizeKey
+triggerEscKey
 (
-"
-VK_ESCAPE
-"
-{
-}
-window
 )
 ;
 }
-function
-runTest
-(
-)
-{
 const
 dialog
 =
@@ -384,11 +390,11 @@ function
 (
 )
 {
-ok
+assert_false
 (
 dialog
 .
-close
+open
 "
 dialog
 closed
@@ -418,29 +424,10 @@ showModal
 (
 )
 ;
-synthesizeKey
-(
-"
-VK_ESCAPE
-"
-{
-}
-window
-)
-;
-}
-function
-done
-(
-)
-{
-SimpleTest
-.
-finish
+triggerEscKey
 (
 )
 ;
-}
 <
 /
 script
