--- a/testing/web-platform/tests/html/semantics/interactive-elements/the-dialog-element/dialog-cancel-with-select.html
+++ b/testing/web-platform/tests/html/semantics/interactive-elements/the-dialog-element/dialog-cancel-with-select.html
@@ -1,34 +1,10 @@
 <
 !
 DOCTYPE
-HTML
->
-<
 html
 >
 <
-!
--
--
-https
-:
-/
-/
-bugzilla
-.
-mozilla
-.
-org
-/
-show_bug
-.
-cgi
-?
-id
-=
-1322947
--
--
+html
 >
 <
 head
@@ -37,9 +13,16 @@ head
 title
 >
 Test
-for
-Bug
-1322947
+dialog
+modal
+is
+closed
+by
+escape
+key
+with
+select
+focused
 <
 /
 title
@@ -50,11 +33,9 @@ src
 =
 "
 /
-tests
+resources
 /
-SimpleTest
-/
-SimpleTest
+testharness
 .
 js
 "
@@ -69,11 +50,64 @@ src
 =
 "
 /
-tests
+resources
 /
-SimpleTest
+testharnessreport
+.
+js
+"
+>
+<
 /
-EventUtils
+script
+>
+<
+script
+src
+=
+"
+/
+resources
+/
+testdriver
+.
+js
+"
+>
+<
+/
+script
+>
+<
+script
+src
+=
+"
+/
+resources
+/
+testdriver
+-
+vendor
+.
+js
+"
+>
+<
+/
+script
+>
+<
+script
+src
+=
+"
+/
+resources
+/
+testdriver
+-
+actions
 .
 js
 "
@@ -87,52 +121,7 @@ link
 rel
 =
 "
-stylesheet
-"
-type
-=
-"
-text
-/
-css
-"
-href
-=
-"
-/
-tests
-/
-SimpleTest
-/
-test
-.
-css
-"
-/
->
-<
-/
-head
->
-<
-body
-onload
-=
-"
-SimpleTest
-.
-waitForFocus
-(
-runTest
-)
-"
->
-<
-a
-target
-=
-"
-_blank
+help
 "
 href
 =
@@ -156,6 +145,16 @@ id
 1322947
 "
 >
+<
+/
+head
+>
+<
+body
+>
+<
+p
+>
 Test
 dialog
 modal
@@ -164,18 +163,9 @@ closed
 by
 escape
 key
-<
-/
-a
->
-<
-p
-id
-=
-"
-display
-"
->
+with
+select
+focused
 <
 /
 p
@@ -224,36 +214,19 @@ select
 <
 /
 dialog
->
-<
-pre
-id
-=
-"
-test
-"
 >
 <
 script
-type
-=
-"
-application
-/
-javascript
-"
 >
-SimpleTest
-.
-waitForExplicitFinish
+setup
 (
+{
+single_test
+:
+true
+}
 )
 ;
-function
-runTest
-(
-)
-{
 const
 dialog
 =
@@ -289,11 +262,11 @@ function
 (
 )
 {
-ok
+assert_false
 (
 dialog
 .
-close
+open
 "
 dialog
 with
@@ -316,7 +289,7 @@ showModal
 (
 )
 ;
-ok
+assert_true
 (
 select
 =
@@ -333,36 +306,38 @@ focused
 "
 )
 ;
-synthesizeKey
-(
+const
+escKey
+=
 "
-VK_ESCAPE
+\
+uE00C
 "
-{
-}
-window
-)
 ;
-}
-function
-done
-(
-)
-{
-SimpleTest
+new
+test_driver
 .
-finish
+Actions
+(
+)
+.
+keyDown
+(
+escKey
+)
+.
+keyUp
+(
+escKey
+)
+.
+send
 (
 )
 ;
-}
 <
 /
 script
->
-<
-/
-pre
 >
 <
 /
