--- a/testing/web-platform/tests/html/semantics/interactive-elements/the-dialog-element/dialog-cancel-preventDefault.html
+++ b/testing/web-platform/tests/html/semantics/interactive-elements/the-dialog-element/dialog-cancel-preventDefault.html
@@ -1,34 +1,10 @@
 <
 !
 DOCTYPE
-HTML
->
-<
 html
 >
 <
-!
--
--
-https
-:
-/
-/
-bugzilla
-.
-mozilla
-.
-org
-/
-show_bug
-.
-cgi
-?
-id
-=
-1322947
--
--
+html
 >
 <
 head
@@ -37,9 +13,16 @@ head
 title
 >
 Test
+cancel
+event
+with
+preventDefault
+on
+cancel
+event
 for
-Bug
-1322947
+dialog
+element
 <
 /
 title
@@ -50,11 +33,9 @@ src
 =
 "
 /
-tests
+resources
 /
-SimpleTest
-/
-SimpleTest
+testharness
 .
 js
 "
@@ -69,11 +50,64 @@ src
 =
 "
 /
-tests
+resources
 /
-SimpleTest
+testharnessreport
+.
+js
+"
+>
+<
 /
-EventUtils
+script
+>
+<
+script
+src
+=
+"
+/
+resources
+/
+testdriver
+.
+js
+"
+>
+<
+/
+script
+>
+<
+script
+src
+=
+"
+/
+resources
+/
+testdriver
+-
+vendor
+.
+js
+"
+>
+<
+/
+script
+>
+<
+script
+src
+=
+"
+/
+resources
+/
+testdriver
+-
+actions
 .
 js
 "
@@ -87,52 +121,7 @@ link
 rel
 =
 "
-stylesheet
-"
-type
-=
-"
-text
-/
-css
-"
-href
-=
-"
-/
-tests
-/
-SimpleTest
-/
-test
-.
-css
-"
-/
->
-<
-/
-head
->
-<
-body
-onload
-=
-"
-SimpleTest
-.
-waitForFocus
-(
-runTest
-)
-"
->
-<
-a
-target
-=
-"
-_blank
+help
 "
 href
 =
@@ -156,29 +145,27 @@ id
 1322947
 "
 >
+<
+/
+head
+>
+<
+body
+>
+<
+p
+>
 Test
 cancel
 event
 with
 preventDefault
 on
-keydown
+cancel
 event
 for
 dialog
 element
-<
-/
-a
->
-<
-p
-id
-=
-"
-display
-"
->
 <
 /
 p
@@ -200,27 +187,15 @@ p
 dialog
 >
 <
-pre
-id
-=
-"
-test
-"
->
-<
 script
-type
-=
-"
-application
-/
-javascript
-"
 >
-SimpleTest
-.
-waitForExplicitFinish
+setup
 (
+{
+single_test
+:
+true
+}
 )
 ;
 var
@@ -228,11 +203,6 @@ hasCancelEventFired
 =
 false
 ;
-function
-runTest
-(
-)
-{
 const
 dialog
 =
@@ -253,29 +223,12 @@ verify
 =
 >
 {
-ok
+assert_true
 (
-!
 hasCancelEventFired
 "
 cancel
-should
-not
-be
-fired
-"
-)
-;
-ok
-(
-hasKeydownEventFired
-"
-document
-level
-keydown
-event
-should
-be
+is
 fired
 "
 )
@@ -285,6 +238,7 @@ done
 )
 ;
 }
+;
 dialog
 .
 addEventListener
@@ -298,25 +252,6 @@ event
 )
 {
 hasCancelEventFired
-=
-true
-;
-}
-)
-;
-document
-.
-addEventListener
-(
-"
-keydown
-"
-function
-(
-event
-)
-{
-hasKeydownEventFired
 =
 true
 ;
@@ -339,6 +274,32 @@ verify
 }
 0
 )
+}
+)
+;
+dialog
+.
+addEventListener
+(
+"
+close
+"
+function
+(
+)
+{
+assert_true
+(
+false
+"
+close
+event
+should
+not
+be
+fired
+"
+)
 ;
 }
 )
@@ -349,36 +310,38 @@ showModal
 (
 )
 ;
-synthesizeKey
-(
+const
+escKey
+=
 "
-VK_ESCAPE
+\
+uE00C
 "
-{
-}
-window
-)
 ;
-}
-function
-done
-(
-)
-{
-SimpleTest
+new
+test_driver
 .
-finish
+Actions
+(
+)
+.
+keyDown
+(
+escKey
+)
+.
+keyUp
+(
+escKey
+)
+.
+send
 (
 )
 ;
-}
 <
 /
 script
->
-<
-/
-pre
 >
 <
 /
